...
            android:text="Logout"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEvents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        app:tint="@android:color/white" />
...
